# rust_postgre_template

./: .env  Cargo.toml  Dockerfile.dev  Makefile  README.md  docker-compose.yml
migrations/: 20230310033357_init.sql
src/: infrastructure.rs  main.rs
src/domain/: service.rs
src/domain/model/: test.rs
src/domain/service/: interface.rs  test.rs
src/infrastructure/: database.rs  query.rs  repository.rs  unit_of_work.rs
src/infrastructure/query/: interface.rs  test_query.rs
src/infrastructure/repository/: interface.rs  test_repositpry.rs
