[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
dotenv = "0.15.0"
once_cell = "1.17.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
thiserror = "1.0.39"
tokio = { version = "1.26", features = ["full"] }
ulid = "1.0.0"
